# mpmc_example

./: CMakeLists.txt  README.md  get_dependencies
include/: data_builder.h  data_fragment.h  data_listener.h  event_builder.h  map_defs.h
src/: .data_builder.cpp.swp  .event_builder.cpp.swp  .main.cpp.swp  .main_sender.cpp.swp  data_builder.cpp  data_listener.cpp  event_builder.cpp  main.cpp  main_sender.cpp
